Jann 30/objects/GS1_Unit_Capacity__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <formula>Unit__r.Code__c + &apos;~&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UniqueKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <referenceTo>GS1_Unit__c</referenceTo>
        <relationshipLabel>Unit Capacities</relationshipLabel>
        <relationshipName>Unit_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>GS1 Unit Capacity</label>
    <nameField>
        <label>Unit Capacity</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IK0000000DmhrMAC_00NK00000017zfmMAA</fullName>
        <active>true</active>
        <field>GS1_Request__c.Capacity__c</field>
        <filterItems>
            <field>GS1_Unit_Capacity__c.Unit__c</field>
            <operation>equals</operation>
            <valueField>$Source.Unit__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>GS1 Request_Capacity</name>
        <sourceObject>GS1_Request__c</sourceObject>
    </namedFilters>
    <pluralLabel>GS1 Unit Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>